--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -98,6 +98,9 @@
     <ClCompile Include="..\src\EventManager.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\GameController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\GameObject.h">
@@ -198,6 +201,9 @@
     </ClInclude>
     <ClInclude Include="..\src\MouseButtons.h">
       <Filter>Enums</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\GameController.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
