minor renaming and bug prevention

--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -212,5 +212,8 @@
     <ClInclude Include="..\src\Plane.h">
       <Filter>Game Objects</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\SoundType.h">
+      <Filter>Enums</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
