--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ bld/
 #[Bb]in/
 [Oo]bj/
 [Ll]og/
+bin/Debug/Template.exe
 
 # Visual Studio 2015 cache/options directory
 .vs/
@@ -63,12 +64,14 @@ artifacts/
 *.tmp
 *.tmp_proj
 *.log
+*.tlog
 *.vspscc
 *.vssscc
 .builds
 *.pidb
 *.svclog
 *.scc
+*.idb
 
 # Chutzpah Test files
 _Chutzpah*
