--- a/Template/imgui.ini
+++ b/Template/imgui.ini
@@ -1,12 +1,12 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=175,95
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=202,0
+Pos=78,136
 Size=550,680
-Collapsed=0
+Collapsed=1
 
 [Window][Image]
 Pos=60,60
@@ -71,5 +71,30 @@ Collapsed=0
 [Window][About Pathfinding Simulator]
 Pos=218,119
 Size=135,69
+Collapsed=0
+
+[Window][Hello, world!]
+Pos=3,78
+Size=345,180
+Collapsed=1
+
+[Window][Play Scene]
+Pos=478,276
+Size=32,54
+Collapsed=1
+
+[Window][Example: Simple layout]
+Pos=179,57
+Size=500,440
+Collapsed=0
+
+[Window][Example Window Title]
+Pos=11,14
+Size=291,96
+Collapsed=0
+
+[Window][Your Window Title Goes Here]
+Pos=71,22
+Size=291,100
 Collapsed=0
 
