--- a/Template/Template.vcxproj
+++ b/Template/Template.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="..\src\Target.cpp" />
     <ClCompile Include="..\src\TextureManager.cpp" />
     <ClCompile Include="..\src\Util.cpp" />
+    <ClCompile Include="PressurePlate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\IMGUI\imconfig.h" />
@@ -232,6 +233,7 @@
     <ClInclude Include="..\src\TextureManager.h" />
     <ClInclude Include="..\src\Transform.h" />
     <ClInclude Include="..\src\Util.h" />
+    <ClInclude Include="PressurePlate.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
