perhaps last template meta commit

--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -123,7 +123,7 @@
     <ClCompile Include="..\include\IMGUI\imgui_widgets.cpp">
       <Filter>IMGUI</Filter>
     </ClCompile>
-    <ClCompile Include="PressurePlate.cpp">
+    <ClCompile Include="..\src\PressurePlate.cpp">
       <Filter>Game Objects</Filter>
     </ClCompile>
   </ItemGroup>
@@ -260,7 +260,7 @@
     <ClInclude Include="..\include\IMGUI\imstb_truetype.h">
       <Filter>IMGUI</Filter>
     </ClInclude>
-    <ClInclude Include="PressurePlate.h">
+    <ClInclude Include="..\src\PressurePlate.h">
       <Filter>Game Objects</Filter>
     </ClInclude>
   </ItemGroup>
