--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="..\src\Level1Background.cpp">
       <Filter>Game Objects</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Platform.cpp">
+      <Filter>Game Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\StartScene.h">
