--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -281,6 +281,9 @@
     <ClInclude Include="..\src\Level1Background.h">
       <Filter>Game Objects</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\Platform.h">
+      <Filter>Game Objects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md">
