Seperate SDL Window for ImGui

--- a/Template/imgui.ini
+++ b/Template/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=78,136
+Pos=1,104
 Size=550,680
 Collapsed=1
 
@@ -94,7 +94,12 @@ Size=291,96
 Collapsed=0
 
 [Window][Your Window Title Goes Here]
-Pos=71,22
+Pos=1,3
 Size=291,100
 Collapsed=0
+
+[Window][Default GUI Function]
+Pos=3,8
+Size=331,67
+Collapsed=1
 
