Wrote comments in Agent class as well Rigidbody and Transform structs

--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -283,5 +283,8 @@
     <None Include="..\README.md">
       <Filter>DOCS</Filter>
     </None>
+    <None Include="API documentation.md">
+      <Filter>DOCS</Filter>
+    </None>
   </ItemGroup>
 </Project>
