fixed Window Focus Bug

--- a/Template/Template.vcxproj
+++ b/Template/Template.vcxproj
@@ -241,6 +241,7 @@
     <ClInclude Include="..\src\TextureManager.h" />
     <ClInclude Include="..\src\Transform.h" />
     <ClInclude Include="..\src\Util.h" />
+    <ClInclude Include="..\src\WindowName.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md" />
