--- a/Template/imgui.ini
+++ b/Template/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=11,81
+Pos=2,89
 Size=550,680
 Collapsed=0
 
@@ -101,6 +101,11 @@ Collapsed=0
 [Window][Default GUI Function]
 Pos=3,19
 Size=332,67
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=339,273
 Collapsed=0
 
 [Table][0xA43C3885,3]
