--- a/Template/Template.vcxproj.filters
+++ b/Template/Template.vcxproj.filters
@@ -287,6 +287,9 @@
     <ClInclude Include="..\src\WindowName.h">
       <Filter>Enums</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\InputType.h">
+      <Filter>Enums</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md">
